# srpc

./: ProjectHome.md
nsrpc/: INSTALL.txt  Makefile.am
nsrpc/benchmark/MessageBlockManagerTest/: Makefile.am  MessageBlockManagerTest_vc8.vcproj
nsrpc/doc/: mainpage.dox
nsrpc/examples/P2pTest/: Config.cpp  Config.h  Makefile.am  P2pTest.vcproj  Peer.cpp  Peer.h  PeerService.h
nsrpc/examples/SimpleRelayServer/: Makefile.am  SimpleRelayServer_vc8.vcproj  stdafx.h
nsrpc/include/nsrpc/: CachedSessionManager.h  PacketSeedExchanger.h  PacketSeedExchangerFactory.h  ProactorFactory.h  ProactorSession.h  ProactorSessionAcceptor.h  ProactorSessionConnector.h  ProactorTask.h  ReactorSession.h  ReactorTask.h  RpcClientSession.h  RpcProactorSession.h  RpcReactorSession.h  RpcSession.h  Session.h  SessionConfig.h  SessionConnector.h  SessionFactory.h
nsrpc/include/nsrpc/config/: Proactor.h  config_gcc.h
nsrpc/include/nsrpc/detail/: ClientSession.h  CsProtocol.h  MessageBlockStreamBuffer.h  PacketCoder.h  Protocol.h  RpcNetworkForBroadcast.h  SessionDestroyer.h  SessionManager.h  SessionRpcHint.h  SessionRpcNetwork.h  SessionRpcNetworkCallback.h
nsrpc/include/nsrpc/p2p/: Group.h  P2pConfig.h  P2pEventHandler.h  P2pSession.h  PeerHint.h  PeerId.h  PeerStats.h  PlugIn.h  RpcPlugIn.h
nsrpc/include/nsrpc/utility/: AceUtil.h  Logger.h  MemoryPool.h  MessageBlockManager.h  ObjectAllocator.h  SmartPtr.h  SystemUtil.h  VariousMemoryAllocator.h
nsrpc/src/: AceUtil.cpp  BandwidthLimit.h  CachedSessionManager.cpp  ClientSession.cpp  Makefile  PacketSeedExchanger.cpp  PacketSeedExchangerImpl.cpp  PacketSeedExchangerImpl.h  ProactorFactory.cpp  ProactorSession.cpp  ProactorSessionAcceptor.cpp  ProactorTask.cpp  ReactorSession.cpp  RpcClientSession.cpp  RpcProactorSession.cpp  RpcSession.cpp  Session.cpp  SessionAcceptor.cpp  SessionRpcNetwork.cpp  SmartPtr.cpp  nsrpc.vcproj  nsrpc_vc8.vcproj
nsrpc/src/p2p/: AnonymousMessageManager.h  GroupManager.cpp  GroupManager.h  P2pEndpoint.cpp  P2pMessages.h  P2pSessionImpl.cpp  P2pSessionImpl.h  Peer.cpp  Peer.h  PeerCandidate.cpp  PeerManager.cpp  PeerManager.h  PeerMessageHandler.h  PeerTime.cpp  PluginManager.h  RelayServiceImpl.cpp  RelayServiceImpl.h  SimpleRelayService.cpp  StunServiceImpl.h  SystemService.h  SystemServiceHandler.h  SystemServiceImpl.cpp  SystemServiceImpl.h
nsrpc/test/EchoTest/: Config.h  EchoClient.h  EchoServer.h  EchoTest.cpp  EchoTest.vcproj  EchoTest_vc8.vcproj  Makefile.am  stdafx.h
nsrpc/test/nsrpcTest/: AceTestFixture.h  CachedSessionManagerTest.cpp  ClientSessionTest.cpp  ClientSessionTestFixture.h  LogManagerTest.cpp  Makefile  MemoryPoolTest.cpp  MessageBlockManagerTest.cpp  MessageBlockStreamBufferTest.cpp  ObjectAllocatorTest.cpp  P2pGroupTest.cpp  P2pHolePunchingTest.cpp  P2pHostMigrationTest.cpp  P2pRelayTest.cpp  P2pSessionTest.cpp  P2pSessionTestFixture.cpp  P2pSessionTestFixture.h  ProactorSessionConnectorTest.cpp  ProactorSessionTest.cpp  ProactorSessionTestFixture.h  ReactorSessionTestFixture.h  RpcSessionTest.cpp  SessionAcceptorTest.cpp  SessionConnectorTest.cpp  SessionTest.cpp  SessionTestFixture.h  TestCachedSessionManager.h  TestClient.h  TestProactorSession.h  TestProactorSessionManager.h  VariousMemoryAllocatorTest.cpp  nsrpcTest_vc8.vcproj  stdafx.h
srpc/: DEPENDENCIES.txt  Makefile.am  configure.ac
srpc/benchmark/StreamingTest/: StreamingTest.cpp  StreamingTest.vcproj  StreamingTest_vc8.vcproj
srpc/doc/: Doxyfile  doxygenfile  mainpage.dox
srpc/examples/NamingService/: Makefile.am  NamingServiceClient.h  NamingServiceNetwork.cpp  NamingServiceServer.h  NamingService_vc8.vcproj  stdafx.h
srpc/include/srpc/: ContainerTypes.h  Exception.h  IStream.h  OStream.h  RpcContainers.h  RpcForwarder.h  RpcInterface.h  RpcNetwork.h  RpcP2p.h  RpcPacketType.h  RpcReceiver.h  RpcTypes.h  StreamFactory.h  Types.h  Version.h  srpc.h  srpc_macros.h
srpc/include/srpc/config/: srpc.h
srpc/include/srpc/detail/: Allocator.h  ForwardingFunctors.h  IBitStream.h  IByteStream.h  OBitStream.h  OByteStream.h  ReceivingFunctors.h  RpcCommand.h  RpcForwarderDetail.h  RpcId.h  RpcInterfaceDetail.h  RpcPrototypeDetail.h  RpcReceiverDetail.h  TypeList.h  VectorStreamBuffer.h
srpc/include/srpc/utility/: Bits.h  CUtils.h  Endian.h  Hash.h  StlUtils.h  Unicode.h
srpc/src/: IByteStream.cpp  Makefile.am  OByteStream.cpp  RpcNetwork.cpp  RpcReceiver.cpp  StreamFactory.cpp  Unicode.cpp  srpc_vc8.vcproj
srpc/test/: DummyRpcCommand.h  DummyRpcInterface.h  DummyRpcServer.cpp  DummyRpcServer.h  ForwardingFunctorTest.cpp  IBitStreamTest.cpp  IByteStreamTest.cpp  Makefile.am  MockRpcNetwork.h  MultipleRpcReceiverTest.cpp  OBitStreamTest.cpp  ReceivingFunctorTest.cpp  RpcConainersTest.cpp  RpcForwarderTest.cpp  RpcTypesTest.cpp  StreamFixture.h  StreamTexture.h  UnicodeTest.cpp  srpcTest.vcproj  srpcTest_vc8.vcproj
tags/REL-1.7.34/srpc/doc/: Makefile.am
trunk/nsrpc/src/: AceUtil.cpp  CachedSessionManager.cpp  ClientSession.cpp  CsPacketCoder.h  Makefile.am  PacketSeedExchangerImpl.cpp  ProactorFactory.cpp  ProactorSession.cpp  ProactorSessionAcceptor.cpp  ProactorTask.cpp  ReactorSession.cpp  RpcClientSession.cpp  RpcNetworkForBroadcast.cpp  RpcProactorSession.cpp  RpcSession.cpp  Session.cpp  SessionConnector.cpp  SessionRpcNetwork.cpp  SmartPtr.cpp  nsrpc.vcproj  nsrpc_vc8.vcproj  stdafx.h
trunk/srpc/: CHANGES.txt  Makefile.am  configure.ac
trunk/srpc/doc/: Makefile.am  doxygenfile
trunk/srpc/include/: Makefile.am
trunk/srpc/src/: IBitStream.cpp  Makefile  Makefile.am  OBitStream.cpp  RpcForwarder.cpp  RpcNetwork.cpp  RpcReceiver.cpp  StreamFactory.cpp  srpc.vcproj  srpc_vc8.vcproj  stdafx.cpp  stdafx.h
trunk/srpc/test/: DummyRpcClient.cpp  DummyRpcClient.h  DummyRpcCommand.h  ForwardingFunctorTest.cpp  IBitStreamTest.cpp  IByteStreamTest.cpp  Makefile  MultipleRpcReceiverTest.cpp  OByteStreamTest.cpp  RpcCommandTest.cpp  RpcConainersTest.cpp  RpcEventTest.cpp  RpcReceiverTest.cpp  RpcTypesTest.cpp  StreamFixture.h  VectorStreamBufferTest.cpp  srpcTest.cpp  srpcTest.vcproj  srpcTest_vc8.vcproj  stdafx.h
(+1150 files in other folders)
