nobase_include_HEADERS = \
	srpc/config/config.h \
	srpc/config/config_gcc.h \
	srpc/config/config_msvc.h \
	srpc/config/srpc.h \
	srpc/ContainerTypes.h \
	srpc/detail/Allocator.h \
	srpc/detail/ForwardingFunctors.h \
	srpc/detail/IBitStream.h \
	srpc/detail/IByteStream.h \
	srpc/detail/Mutex.h \
	srpc/detail/OBitStream.h \
	srpc/detail/OByteStream.h \
	srpc/detail/ReceivingFunctors.h \
	srpc/detail/RpcCommand.h \
	srpc/detail/RpcEvent.h \
	srpc/detail/RpcForwarderDetail.h \
	srpc/detail/RpcId.h \
	srpc/detail/RpcInterfaceDetail.h \
	srpc/detail/RpcPrototypeDetail.h \
	srpc/detail/RpcReceiverDetail.h \
	srpc/detail/TypeList.h \
	srpc/detail/VectorStreamBuffer.h \
	srpc/utility/Bits.h \
	srpc/utility/CUtils.h \
	srpc/utility/Endian.h \
	srpc/utility/Hash.h \
	srpc/utility/StlUtils.h \
	srpc/utility/Unicode.h \
	srpc/Exception.h \
	srpc/IStream.h \
	srpc/OStream.h \
	srpc/RpcContainers.h \
	srpc/RpcForwarder.h \
	srpc/RpcInterface.h \
	srpc/RpcNetwork.h \
	srpc/RpcP2p.h \
	srpc/RpcPacketType.h \
	srpc/RpcPrototype.h \
	srpc/RpcReceiver.h \
	srpc/RpcTypes.h \
	srpc/StreamBuffer.h \
	srpc/StreamFactory.h \
	srpc/StringTypes.h \
	srpc/Types.h

