nobase_include_HEADERS = \
	nsrpc/CachedSessionManager.h \
	nsrpc/nsrpc.h \
	nsrpc/PacketSeedExchanger.h \
	nsrpc/PacketSeedExchangerFactory.h \
	nsrpc/ProactorFactory.h \
	nsrpc/ProactorTask.h \
	nsrpc/ReactorTask.h \
	nsrpc/RpcClientSession.h \
	nsrpc/RpcSession.h \
	nsrpc/RpcSessionConfig.h \
	nsrpc/Session.h \
	nsrpc/SessionAcceptor.h \
	nsrpc/SessionConfig.h \
	nsrpc/SessionConnector.h \
	nsrpc/SessionFactory.h \
	nsrpc/Version.h \
	nsrpc/config/config_gcc.h \
	nsrpc/config/config_msvc.h \
	nsrpc/config/Proactor.h \
	nsrpc/detail/Asynch_RW.h \
	nsrpc/detail/ClientSession.h \
	nsrpc/detail/CsProtocol.h \
	nsrpc/detail/MessageBlockProvider.h \
	nsrpc/detail/MessageBlockStreamBuffer.h \
	nsrpc/detail/PacketCoder.h \
	nsrpc/detail/PacketCoderFactory.h \
	nsrpc/detail/Protocol.h \
	nsrpc/detail/rpc_interface/SecurityService.h \
	nsrpc/detail/RpcNetworkForBroadcast.h \
	nsrpc/detail/SessionCreator.h \
	nsrpc/detail/SessionDestroyer.h \
	nsrpc/detail/SessionManager.h \
	nsrpc/detail/SessionPool.h \
	nsrpc/detail/SessionRpcHint.h \
	nsrpc/detail/SessionRpcNetwork.h \
	nsrpc/detail/SessionRpcNetworkCallback.h \
	nsrpc/p2p/Group.h \
	nsrpc/p2p/P2pConfig.h \
	nsrpc/p2p/P2pEventHandler.h \
	nsrpc/p2p/P2pSession.h \
	nsrpc/p2p/P2pSessionFactory.h \
	nsrpc/p2p/PeerAddress.h \
	nsrpc/p2p/PeerHint.h \
	nsrpc/p2p/PeerId.h \
	nsrpc/p2p/PeerStats.h \
	nsrpc/p2p/PlugIn.h \
	nsrpc/p2p/RpcPlugIn.h \
	nsrpc/p2p/detail/P2pAddress.h \
	nsrpc/p2p/detail/P2pEndpoint.h \
	nsrpc/p2p/detail/P2pPeerHint.h \
	nsrpc/p2p/detail/P2pProtocol.h \
	nsrpc/p2p/detail/P2pRpcNetwork.h \
	nsrpc/p2p/detail/P2pRpcTypes.h \
	nsrpc/p2p/detail/PeerCipherKeyCache.h \
	nsrpc/p2p/detail/PeerNetworkSender.h \
	nsrpc/p2p/detail/PeerNotifier.h \
	nsrpc/p2p/detail/PeerTime.h \
	nsrpc/p2p/rpc_interface/RelayService.h \
	nsrpc/p2p/rpc_interface/StunService.h \
	nsrpc/p2p/server/SimpleRelayService.h \
	nsrpc/utility/AceUtil.h \
	nsrpc/utility/detail/BaseAllocator.h \
	nsrpc/utility/Logger.h \
	nsrpc/utility/LogManager.h \
	nsrpc/utility/MemoryPool.h \
	nsrpc/utility/MessageBlockManager.h \
	nsrpc/utility/ObjectAllocator.h \
	nsrpc/utility/ObjectPool.h \
	nsrpc/utility/SmartPtr.h \
	nsrpc/utility/SystemUtil.h \
	nsrpc/utility/VariousMemoryAllocator.h
